--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -32,10 +32,11 @@
 
 </main>
 
-<script src="/__/firebase/5.5.4/firebase-app.js"></script>
-<script src="/__/firebase/5.5.4/firebase-auth.js"></script>
-<script src="/__/firebase/5.5.4/firebase-firestore.js"></script>
-<script src="/__/firebase/5.5.4/firebase-storage.js"></script>
+<script src="/__/firebase/5.5.6/firebase-app.js"></script>
+<script src="/__/firebase/5.5.6/firebase-auth.js"></script>
+<script src="/__/firebase/5.5.6/firebase-firestore.js"></script>
+<script src="/__/firebase/5.5.6/firebase-storage.js"></script>
+<script src="/__/firebase/init.js"></script>
 <script src="https://code.jquery.com/jquery-3.3.1.min.js"
         integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
         crossorigin="anonymous"></script>
