Moving to sapper! WIP

--- a/src/components/Nav.html
+++ b/src/components/Nav.html
@@ -4,7 +4,7 @@
         H&L
     </div>
     <div class="links">
-        <a class='{segment === undefined ? "selected" : ""}' href=".">Home</a>
+        <a class='{segment === undefined ? "selected" : ""}' href=".">Store</a>
         <a class='{segment === "about" ? "selected" : ""}' href="about">About</a>
     </div>
 </nav>
