Add delete functionality to admin view. still WIP

--- a/src/components/Nav.html
+++ b/src/components/Nav.html
@@ -4,8 +4,8 @@
         H&L
     </div>
     <div class="links">
-        <a class='{segment === undefined ? "selected" : ""}' href=".">Store</a>
-        <a class='{segment === "about" ? "selected" : ""}' href="about">About</a>
+        <a rel="prefetch" class='{segment === undefined ? "selected" : ""}' href="/">Store</a>
+        <a class='{segment === "about" ? "selected" : ""}' href="/about">About</a>
     </div>
 </nav>
 
